# Mowito_assignment

./: README.md
BT/: CMakeLists.txt  bt_demo.cpp
Math_Assignment/: Euler_Quarternion_converson.py  Forward_Kinematics_for_armgiven.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/camera_publisher/share/camera_publisher/: package.sh
ros2_ws/install/image_conversion/share/image_conversion/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/camera_publisher/: package.xml  setup.py
ros2_ws/src/image_conversion/: package.xml  setup.py
ros2_ws/src/image_conversion/launch/: image_processing.launch.py
